# urbi-debian

./: .version  Makefile.in  aclocal.m4  bootstrap.stamp  configure
bison/: .tarball-version  Makefile.in  aclocal.m4  configure
bison/doc/: bison.1  bison.help  bison.info  stamp-vti
bison/examples/calc++/: Makefile.in  calc++-driver.cc  calc++-driver.hh  calc++-parser.cc  calc++-parser.hh  calc++-parser.yy  calc++-scanner.cc  calc++-scanner.ll  calc++.cc  location.hh  position.hh  stack.hh
bison/lib/: config.hin  fprintf.c  gnulib.mk  printf.c  sprintf.c  sys_stat.in.h  vsnprintf.c  vsprintf.c
bison/m4/: gnulib-comp.m4
bison/po/: bison.pot
bison/runtime-po/: bison-runtime.pot
bison/src/: scan-code.c  scan-gram.c  scan-skel.c
bison/tests/: package.m4  testsuite
build-aux/: boost.m4  bootstrap  check.mk  package-version.m4  package-version.mk  require-progs.m4  urbi-append-flags.m4  urbi-canonical-host.m4  urbi-config-scripts.m4  urbi-dirs.m4  urbi-distcheck-configure-flags.m4  urbi-enable-doc-sections.m4  urbi-module.m4  urbi-prog-cxx.m4  warning.m4
build-aux/m4sh/: children.m4sh
build-aux/make/: html-dir.mk
build-aux/perl/BuildAux/: FileUtils.pm  Getopt.pm
debian/: changelog  control  copyright  liburbi-sdk-dev.install  liburbi-sdk2.3.install  rules  urbi-sdk2.3.install  watch
doc/: Makefile.in
doc/document-aux/styles/: gostai-documentation.sty  gostai-report.sty  mycxx.sty  myhyperref.sty  mylistings.hva  mylistings.sty  texi.hva
doc/specs/: ros.tex
doc/tests/: getting-started-test.mk  urbi-sandbox-00.chk  urbi-sandbox-test.mk
doc/tests/guide/: faq-00.chk  faq-test.mk  k1-to-k2-00.chk  k1-to-k2-test.mk
doc/tests/specs/: barrier-00.chk  barrier-test.mk  binary-00.chk  binary-test.mk  boolean-00.chk  boolean-test.mk  call-message-00.chk  call-message-test.mk  channel-00.chk  channel-test.mk  code-00.chk  code-test.mk  comparable-00.chk  comparable-test.mk  container-00.chk  container-test.mk  control-00.chk  control-test.mk  date-00.chk  date-test.mk  dictionary-00.chk  dictionary-test.mk  directory-00.chk  directory-01.chk  directory-test.mk  duration-00.chk  duration-test.mk  event-00.chk  event-test.mk  exception-00.chk  exception-test.mk  file-00.chk  file-01.chk  file-test.mk  finalizable-00.chk  finalizable-test.mk  float-00.chk  float-limits-00.chk  float-limits-test.mk  float-test.mk  (+111 more)
doc/tests/tables/: notation-00.chk  notation-test.mk  release-notes-00.chk  release-notes-test.mk
doc/tests/tutorial/: concurrent-00.chk  concurrent-01.chk  concurrent-02.chk  concurrent-03.chk  concurrent-04.chk  concurrent-05.chk  concurrent-06.chk  concurrent-07.chk  concurrent-08.chk  concurrent-test.mk  event-00.chk  event-01.chk  event-02.chk  event-03.chk  event-04.chk  event-test.mk  first-steps-00.chk  first-steps-test.mk  flow-00.chk  flow-test.mk  functional-00.chk  functional-test.mk  functions-00.chk  functions-test.mk  object-00.chk  object-01.chk  object-02.chk  object-03.chk  object-04.chk  object-05.chk  object-06.chk  object-07.chk  object-08.chk  object-09.chk  object-10.chk  object-test.mk  value-00.chk  value-01.chk  value-02.chk  value-03.chk  (+4 more)
doc/tests/uobject/: quick-start-00.chk  quick-start-test.mk
doc/tutorial/: ros.tex
include/urbi/object/: any-to-boost-function.hxx  cxx-primitive.hxx  executable.hh
modules/: Makefile.in  modules-bootstrap.stamp  modules.ac  modules.mk
modules/algorithm/md5/: md5-impl.cc  md5-impl.hh  md5.cc  module.ac.auto  module.mk.auto
modules/system/ros/: module.ac  module.ac.auto  (+1 more)
sdk-remote/: .version  Makefile.in  aclocal.m4  bootstrap.stamp  configure
sdk-remote/build-aux/: build-aux.mk  fix-libtool-la.mk  init.mk  m4sh.mk  package-version.mk  revision.mk  shlibext.m4  urbi-doc.m4  urbi-libport.m4  urbi-pragma.m4  urbi-prog-latex.m4
sdk-remote/jpeg/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  cderror.h  cdjpeg.c  cdjpeg.h  cjpeg.c  ckconfig.c  coderules.doc  config.hin  configure  configure.ac  djpeg.c  install.doc  jchuff.h  jcphuff.c  jdct.h  jdhuff.h  jerror.c  jidctfst.c  jinclude.h  jmemansi.c  jmemdos.c  jmemmgr.c  jmemname.c  jmemnobs.c  jmemsys.h  jmorecfg.h  jpegint.h  jpeglib.h  jpegtran.c  jutils.c  libjpeg.doc  rdbmp.c  rdgif.c  rdjpgcom.c  rdppm.c  rdrle.c  rdtarga.c  (+9 more)
sdk-remote/jpeg/build-aux/: urbi-libtool.m4
sdk-remote/jpeg/templates/: jconfig.bcc  jconfig.dj  jconfig.doc  jconfig.mac  jconfig.manx  jconfig.mc6  jconfig.sas  jconfig.st  jconfig.vc  jconfig.vms  jconfig.wat  makefile.bcc
sdk-remote/libport/: .version  Makefile.in  aclocal.m4  bootstrap.stamp  configure
sdk-remote/sdk/: config.h.in  umake  umake-link
sdk-remote/src/: Makefile.in
src/: Makefile.in
src/ast/: all.hh  and.cc  and.hh  and.hxx  assign.cc  assign.hh  assign.hxx  assignment.cc  assignment.hh  assignment.hxx  ast-nodes.mk  ast.cc  ast.dot  ast.hh  ast.hxx  at.cc  at.hh  at.hxx  binding.cc  binding.hh  binding.hxx  break.cc  break.hh  break.hxx  call-msg.cc  call-msg.hh  call-msg.hxx  call.cc  call.hh  call.hxx  catch.cc  catch.hh  catch.hxx  class.cc  class.hh  class.hxx  cloner.cc  cloner.hh  composite.cc  composite.hh  (+163 more)
src/kernel/: config.h.in
tests/: Makefile.am  Makefile.in  test.u
tests/1.x/: armor-unarmor.chk  every.chk  function-return.chk  implicit.chk  nameresolution.chk  new-init.chk  parse-errors.chk  preparsing.chk  var-lookup.chk
tests/2.x/: and-environment.chk  and-exception.chk  assert.chk  atom-clone.chk  atomic.chk  atoms.chk  barrier.chk  basic.chk  blocked.chk  break.chk  class.chk  closed-indep.chk  comma-environment.chk  continue.chk  conversion.chk  cycles.chk  date.chk  default-value.chk  deprecated.chk  derive.chk  desugar-conflicts.chk  detach-error.chk  detach-many.chk  dictionary.chk  disown.chk  do.chk  dump-error.chk  echo.chk  edit-container.chk  eval.chk  every-exception.chk  every.chk  fallback.chk  finalizable.chk  format-info.chk  format.chk  freeze.chk  functional.chk  functions-2.chk  functions.chk  (+59 more)
tests/demo/: formation.chk  hierarchy.chk  neuron.chk
tests/uli/: same-level-diff-parent.chk  same-level.chk  work-ended-init.chk
(+335 files in other folders)
